API call and table display added

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>React Fruityvise</title>
-    <link rel="stylesheet" href="./style.css" />
+    <title>React API Call</title>
+    <link rel="stylesheet" href="./tableStyle.css" />
   </head>
   <body>
     <div id="root"></div>
